Ajustando Classe DiagnosticoController